deleted test certificates from project